--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Online Resturant</title>
+    <title>Cake Baker</title>
     <!-- font awesome -->
     <link rel="stylesheet" href="Icons/fontawesome-free-5.9.0-web/css/all.css">
 
